# Curso-de-IA

./: .gitignore  README.md
CNN/: GAAAAAAAAA
Checkers with MinMax -Tarea 002/: CMakeLists.txt
Checkers with MinMax -Tarea 002/include/: API.hpp
Checkers with MinMax -Tarea 002/src/: demo.cpp
Path Finder Algorithms - Tarea 001/: README.md
Path Finder Algorithms - Tarea 001/LaboratorioBusquedas/src/: API.cpp  BFS.cpp
Path Finder Algorithms - Tarea 001/PathFinderC++/: CMakeLists.txt
Path Finder Algorithms - Tarea 001/PathFinderC++/include/: API.h  Graph.h  Settings.h
Path Finder Algorithms - Tarea 001/PathFinderC++/src/: API.cpp  A_Star.cpp
Path Finder Algorithms - Tarea 001/PathFinding/: main.py  search.py
Path Finder Algorithms - Tarea 001/PathFindingMatplotlib/: grafo.py  main.py  path.py  requeriments.txt
PathFinderC++/include/: API.h  A_Star.h  Graph.h  Settings.h
PathFinderC++/src/: API.cpp  A_Star.cpp  BFS.cpp
PathFinding/: display.py
PathFindingMatplotlib/: grafo.py  main.py  path.py
Proyecto-Final/: utlis.py
TRABAJO_1_PATH_FINDER/: main.py
TRABAJO_1_PATH_FINDER/ModuloGrafico/: CMakeLists.txt
TRABAJO_1_PATH_FINDER/ModuloGrafico/data/: 1.txt  2.txt  3.txt  4.txt
TRABAJO_1_PATH_FINDER/ModuloGrafico/include/: PFA_Tools.h  Settings.h
TRABAJO_1_PATH_FINDER/ModuloGrafico/src/: PFA_Tools.cpp  demo.cpp
Tarea 001 - Path Finder Algorithms/LaboratorioBusquedas/include/: API.h  BFS.h  Graph.h  HillClimbing.h
Tarea 001 - Path Finder Algorithms/LaboratorioBusquedas/src/: HillClimbing.cpp
Tarea 001_Path_Finder_Algorithms/: README.md
Tarea 001_Path_Finder_Algorithms/LaboratorioBusquedas/: CMakeLists.txt
Tarea 001_Path_Finder_Algorithms/LaboratorioBusquedas/include/: DFS.h  Settings.h
Tarea 001_Path_Finder_Algorithms/LaboratorioBusquedas/src/: DFS.cpp  demo.cpp
Tarea 002 - Checkers with MinMax/: CMakeLists.txt  README.md
Tarea 002 - Checkers with MinMax/include/: API.hpp  Bot.hpp  Graph.hpp  Token.hpp
Tarea 002 - Checkers with MinMax/screenshots/: 0000.txt
Tarea 002 - Checkers with MinMax/src/: demo.cpp
Tarea 003 - GeneticAlgorithms/: README.md
Tarea 003 - GeneticAlgorithms/Funcion Matematica/: .gitignore  README.md  main.py  requirements.txt
Tarea 003 - GeneticAlgorithms/Funcion Matematica/include/: advanced_searches.py  cruzamiento.py  funcion_matemtica.py  selection.py
Tarea 003 - GeneticAlgorithms/Funcion Matematica/src/: main.py
Tarea 003 - GeneticAlgorithms/TSP/: README.md  init.py
Tarea 003 - GeneticAlgorithms/TSP/viajero_py/: init.py
Tarea 004 - Perceptron OCR for Digits/: README.md
Tarea 004 - Perceptron OCR for Digits/App/: dataset_creator.py  tester.py  trainer.py
Tarea 005 - CNN/: README.md  gaa
Tarea 006 -Proyecto-Final/: DocumentScannerMain.py  README.md  utlis.py
(+89 files in other folders)
